--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Hello, this is 7DevDays</h1>
+    <p>"Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”</p>
 </body>
 
 </html>
